--- a/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_bottom_nav.xml
@@ -1,9 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BottomNav">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="60dp"
+        android:background="@color/orange"
+        app:navigationContentDescription="@string/Cicerone"
+        app:title="@string/Cicerone"
+        app:titleMarginStart="30dp"
+        app:titleTextColor="@color/white" />
+
+    <LinearLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/menu_bottom_navigation"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="-60dp"
+        android:orientation="vertical"
+        >
+
+    </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/menu_bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:itemIconTint="@drawable/selector"
+        app:itemTextColor="@color/white"
+        app:menu="@menu/bottom_navigation"
+        android:layout_alignParentBottom="true"
+        app:labelVisibilityMode="selected"
+        />
+</RelativeLayout>
