--- a/app/src/main/res/menu-v26/menu_actionbar.xml
+++ b/app/src/main/res/menu-v26/menu_actionbar.xml
@@ -7,7 +7,13 @@
         app:showAsAction="always"
         android:icon="@drawable/ic_panic_button"
         android:iconTint="@color/white"
+        />
 
+    <item android:title="Faqs"
+        android:id="@+id/faqs"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_help_users"
+        android:iconTint="@color/white"
         />
 
 </menu>
