--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -235,7 +235,23 @@
                         android:background="@color/white"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        />
+                        >
+
+                        <Button
+                            android:id="@+id/btnCerrarSesion"
+                            android:layout_width="200dp"
+                            android:layout_height="45dp"
+                            android:layout_centerInParent="true"
+                            android:layout_marginLeft="20dp"
+                            android:background="@drawable/custom_button"
+                            android:fontFamily="@font/source_sans_pro"
+                            android:text="@string/cerrar_sesi_n"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="10dp"
+                            android:onClick="launchChatActivity"
+                            />
+                    </RelativeLayout>
 
                 </LinearLayout>
 
