--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="white">#ffffff</color>
     <color name="white_dark">#E5E5E5</color>
     <color name="GrisClaro">#B3B3B3</color>
+    <color name="Red">#ED1B2E</color>
+    <color name="Black">#000000</color>
 </resources>
