--- a/app/src/main/res/layout-v26/card_view_schedule.xml
+++ b/app/src/main/res/layout-v26/card_view_schedule.xml
@@ -6,16 +6,15 @@
     android:orientation="vertical"
     cardview:cardBackgroundColor="@color/colorPrimary"
     cardview:cardCornerRadius="10dp"
-    cardview:contentPadding="10dp"
-    android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="5dp"
+    android:layout_marginHorizontal="20dp"
+    android:layout_marginTop="10dp"
+    android:elevation="5dp"
     >
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:padding="10dp"
             >
 
             <TextView
