--- a/app/src/main/res/layout-v26/card_view_schedule.xml
+++ b/app/src/main/res/layout-v26/card_view_schedule.xml
@@ -16,17 +16,34 @@
             android:orientation="vertical"
             android:padding="10dp"
             >
-
-            <TextView
-                android:id="@+id/txtTituloReservacion"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/source_sans_pro_bold"
-                android:text="Reservacion con  Juan Pablo "
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:id="@+id/txtTituloReservacion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/source_sans_pro_bold"
+                    android:text="Reservacion con  Juan Pablo "
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
+                    />
+                <!--style="?android:attr/actionOverflowButtonStyle"-->
 
+                <ImageButton
+                    android:id="@+id/btnThreePoints"
+                    android:layout_width="25dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_three_points"
+                    android:layout_gravity="center_vertical"
+                     />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/txtFechaReservacion"
@@ -39,6 +56,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp"
+                android:layout_marginRight="25dp"
                 />
 
         </LinearLayout>
