--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DDD3D3"
-    >
+    android:background="#DDD3D3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -353,7 +351,6 @@
                         android:background="@drawable/ic__empty_star"
                         android:layout_marginHorizontal="5dp"
                         android:layout_gravity="center_vertical"
-                        android:onClick="selectedStar"
 
                         />
                     <ImageButton
@@ -363,7 +360,6 @@
                         android:background="@drawable/ic__empty_star"
                         android:layout_marginHorizontal="5dp"
                         android:layout_gravity="center_vertical"
-                        android:onClick="selected2Stars"
                         />
                     <ImageButton
                         android:id="@+id/TresEstrellasGuia"
@@ -372,7 +368,6 @@
                         android:background="@drawable/ic__empty_star"
                         android:layout_marginHorizontal="5dp"
                         android:layout_gravity="center_vertical"
-                        android:onClick="selectedThreeStars"
                         />
 
                     <ImageButton
@@ -381,9 +376,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginHorizontal="5dp"
-                        android:background="@drawable/ic__empty_star"
-                        android:onClick="selectedFourStars" />
-
+                        android:background="@drawable/ic__empty_star" />
                     <ImageButton
                         android:id="@+id/CincoEstrellasGuia"
                         android:layout_width="wrap_content"
@@ -391,7 +384,6 @@
                         android:background="@drawable/ic__empty_star"
                         android:layout_marginHorizontal="5dp"
                         android:layout_gravity="center_vertical"
-                        android:onClick="selected5FiveStars"
                         />
 
                 </LinearLayout>
@@ -428,8 +420,18 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycleComentariosGuia"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/source_sans_pro"
+                    android:text="No hay más comentarios"
+                    android:textSize="18sp" />
             </LinearLayout>
 
         </LinearLayout>
