--- a/app/src/main/res/layout/recycle_comentarios.xml
+++ b/app/src/main/res/layout/recycle_comentarios.xml
@@ -40,8 +40,9 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="5dp"
+        android:layout_height="3dp"
         android:background="#D6D6D6"
-        android:layout_marginBottom="1dp"
+        android:layout_gravity="end"
         />
+
 </LinearLayout>
