--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -20,7 +20,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:fontFamily="@font/source_sans_pro_bold"
-            android:text="Ricardo Alfonso"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp"
             android:layout_marginLeft="10dp"
@@ -63,7 +62,7 @@
                             android:layout_marginRight="10dp"
                             android:layout_marginLeft="10dp"
                             android:layout_marginTop="10dp"
-                            android:background="@drawable/img_catedral_premium"
+                            android:src="@drawable/ic_image_black_24dp"
                             android:adjustViewBounds="true"
                             android:scaleType="centerCrop"
                             />
@@ -82,7 +81,6 @@
                             android:id="@+id/txtDescripcionGuia"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Soy muy apasionado con mi carrera, me gusta dar a conocer la belleza de mi ciudad natal."
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
                             android:fontFamily="@font/source_sans_pro"
@@ -104,7 +102,6 @@
                                 android:id="@+id/txtInfAcademicaGuia"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Tecnologia en Desarrollo de software\nCertificacion en Ingles Avanzado"
                                 android:fontFamily="@font/source_sans_pro"
                                 android:layout_marginLeft="10dp"
                                 android:textColor="@color/colorPrimary"
@@ -130,7 +127,6 @@
                                 android:id="@+id/txtIdiomasGuia"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Español, Ingles"
                                 android:fontFamily="@font/source_sans_pro"
                                 android:layout_marginLeft="10dp"
                                 android:textColor="@color/colorPrimary"
@@ -155,7 +151,6 @@
                                 android:id="@+id/txtHorarioGuia"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="10:00 a 18:00"
                                 android:fontFamily="@font/source_sans_pro"
                                 android:layout_marginLeft="10dp"
                                 android:textColor="@color/colorPrimary"
@@ -180,7 +175,6 @@
                                 android:id="@+id/txtDuracionTourGuia"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Aproximadamente 60 mins"
                                 android:fontFamily="@font/source_sans_pro"
                                 android:layout_marginLeft="10dp"
                                 android:textColor="@color/colorPrimary"
@@ -205,7 +199,6 @@
                                 android:id="@+id/txtCostosTourGuia"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="*Niños: 5 pesos \n*Estudiantes y 3ra edad: 7 pesos \n*Adultos: 10 pesos "
                                 android:fontFamily="@font/source_sans_pro"
                                 android:layout_marginLeft="10dp"
                                 android:textColor="@color/colorPrimary"
