--- a/app/src/main/res/layout/recycle_inbox.xml
+++ b/app/src/main/res/layout/recycle_inbox.xml
@@ -16,7 +16,8 @@
             android:id="@+id/imgPerfilInbox"
             android:layout_width="80dp"
             android:layout_height="100dp"
-            android:background="@drawable/img_catedral_premium"
+            android:src="@drawable/ic_account_default"
+            android:adjustViewBounds="true"
             />
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +31,6 @@
                 android:fontFamily="@font/source_sans_pro_bold"
                 android:textColor="@color/colorPrimary"
                 android:textSize="20sp"
-                android:text="Guia Juan Pablo"
                 android:textAlignment="textStart"
                 android:padding="3dp"
                 android:layout_marginLeft="10dp"
@@ -51,7 +51,6 @@
                     android:fontFamily="@font/source_sans_pro"
                     android:textColor="#2E2E2E"
                     android:textSize="16sp"
-                    android:text="Hola..."
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:padding="5dp"
@@ -65,7 +64,6 @@
                     android:fontFamily="@font/source_sans_pro"
                     android:textColor="#2E2E2E"
                     android:textSize="14sp"
-                    android:text="19:23"
                     android:layout_marginTop="20dp"
                     android:textAlignment="textEnd"
                     android:padding="5dp"
